RELU and Skip Connections.

--- a/pix2pix.ipynb
+++ b/pix2pix.ipynb
@@ -110,7 +110,7 @@
     "\n",
     "\n",
     "def conv2d_transpose(inputs, num_outputs, kernel_size=(4, 4), strides=2,\n",
-    "                     padding='SAME', activation=lrelu, norm=False,\n",
+    "                     padding='SAME', activation=tf.nn.relu, norm=False,\n",
     "                     training=False):\n",
     "    \"\"\"Wrapper for tf.layers.conv2d_transpose with default parameters.\"\"\"\n",
     "    net = tf.layers.conv2d_transpose(inputs, num_outputs, kernel_size,\n",
@@ -176,27 +176,33 @@
     "\n",
     "    with tf.variable_scope('generator') as scope:\n",
     "        with tf.variable_scope('encoder'):\n",
-    "            enc = conv2d(images, 64)\n",
-    "            enc = conv2d(enc, 128, norm=True, training=is_training)\n",
-    "            enc = conv2d(enc, 256, norm=True, training=is_training)\n",
-    "            enc = conv2d(enc, 512, norm=True, training=is_training)\n",
-    "            enc = conv2d(enc, 512, norm=True, training=is_training)\n",
-    "            enc = conv2d(enc, 512, norm=True, training=is_training)\n",
-    "            enc = conv2d(enc, 512, norm=True, training=is_training)\n",
-    "            enc = conv2d(enc, 512, norm=True, training=is_training)\n",
+    "            enc0 = conv2d(images, 64)\n",
+    "            enc1 = conv2d(enc0, 128, norm=True, training=is_training)\n",
+    "            enc2 = conv2d(enc1, 256, norm=True, training=is_training)\n",
+    "            enc3 = conv2d(enc2, 512, norm=True, training=is_training)\n",
+    "            enc4 = conv2d(enc3, 512, norm=True, training=is_training)\n",
+    "            enc5 = conv2d(enc4, 512, norm=True, training=is_training)\n",
+    "            enc6 = conv2d(enc5, 512, norm=True, training=is_training)\n",
+    "            enc7 = conv2d(enc6, 512, norm=True, training=is_training)\n",
     "        with tf.variable_scope('decoder'):\n",
-    "            dec = enc\n",
+    "            dec = conv2d_transpose(enc7, 512, norm=True, training=is_training)\n",
+    "            dec = tf.layers.dropout(dec, .5)  # 512\n",
     "            dec = conv2d_transpose(dec, 512, norm=True, training=is_training)\n",
     "            dec = tf.layers.dropout(dec, .5)\n",
+    "            dec = tf.concat([dec, enc6], axis=-1)  # 1024\n",
     "            dec = conv2d_transpose(dec, 512, norm=True, training=is_training)\n",
     "            dec = tf.layers.dropout(dec, .5)\n",
+    "            dec = tf.concat([dec, enc5], axis=-1)  # 1024\n",
     "            dec = conv2d_transpose(dec, 512, norm=True, training=is_training)\n",
-    "            dec = tf.layers.dropout(dec, .5)\n",
+    "            dec = tf.concat([dec, enc4], axis=-1)  # 1024\n",
     "            dec = conv2d_transpose(dec, 512, norm=True, training=is_training)\n",
-    "            dec = conv2d_transpose(dec, 512, norm=True, training=is_training)\n",
+    "            dec = tf.concat([dec, enc3], axis=-1)  # 1024\n",
     "            dec = conv2d_transpose(dec, 256, norm=True, training=is_training)\n",
+    "            dec = tf.concat([dec, enc2], axis=-1)  # 512\n",
     "            dec = conv2d_transpose(dec, 128, norm=True, training=is_training)\n",
+    "            dec = tf.concat([dec, enc1], axis=-1)  # 256\n",
     "            dec = conv2d_transpose(dec, 64, norm=True, training=is_training)\n",
+    "            dec = tf.concat([dec, enc0], axis=-1)  # 128\n",
     "            out = conv2d(dec, 1, (1, 1), 1, activation=tf.nn.tanh)\n",
     "        ops = get_variables(scope, collection=tf.GraphKeys.UPDATE_OPS)\n",
     "        return out, ops"
@@ -249,7 +255,7 @@
     "    logits=d_logits_fake, labels=soft_labels_like(d_fake, real=False)))\n",
     "d_loss = d_loss_real + d_loss_fake\n",
     "\n",
-    "LAMBDA = 0\n",
+    "LAMBDA = 100\n",
     "\n",
     "# Create generator loss.\n",
     "g_loss = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(\n",
@@ -278,9 +284,9 @@
    "source": [
     "def batches(x, y, batchsize=32):\n",
     "    permute = np.random.permutation(len(train_t))\n",
-    "    for i in range(0, len(train_t) - 1, batchsize):\n",
-    "        indices = permute[i * batchsize:i * batchsize + batchsize]\n",
-    "        yield x[indices], y[indices]"
+    "    for i in range(0, len(train_t)-1, batchsize):\n",
+    "        indices = permute[i*batchsize:i*batchsize+batchsize]\n",
+    "        yield x[indices], y[indices]    "
    ]
   },
   {
@@ -289,35 +295,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EPOCHS = 10\n",
+    "EPOCHS = 200\n",
     "\n",
     "sess = tf.InteractiveSession()\n",
     "sess.run(tf.global_variables_initializer())\n",
     "\n",
-    "batch = -1\n",
+    "\n",
+    "def moving_average(current, previous=None, alpha=0.01):\n",
+    "    try:\n",
+    "        return alpha * current + (1 - alpha) * previous\n",
+    "    except:\n",
+    "        return loss\n",
+    "\n",
+    "\n",
+    "mavg_d_loss = None\n",
+    "mavg_g_loss = None\n",
+    "\n",
+    "batch = 0\n",
     "for epoch in range(1, EPOCHS + 1):\n",
-    "    for batch_x, batch_t in batches(train_x, train_t, 32):\n",
+    "    for batch_x, batch_t in batches(train_x, train_t, 1):\n",
     "        batch += 1\n",
     "        if batch % 2 == 0:\n",
-    "            sess.run(d_op, \n",
-    "                     {images: batch_x, depthmaps: batch_t, is_training: True})\n",
+    "            loss, _ = sess.run([d_loss, d_op],\n",
+    "                               {images: batch_x, depthmaps: batch_t,\n",
+    "                                is_training: True})\n",
+    "            mavg_d_loss = moving_average(loss, mavg_d_loss)\n",
     "        else:\n",
-    "            sess.run(g_op, \n",
-    "                     {images: batch_x, is_training: True})\n",
-    "        print(batch)\n",
+    "            loss, _ = sess.run([g_loss, g_op],\n",
+    "                               {images: batch_x, depthmaps: batch_t,\n",
+    "                                is_training: True})\n",
+    "            mavg_g_loss = moving_average(loss, mavg_g_loss)\n",
     "\n",
-    "    dloss, gloss = sess.run([d_loss, g_loss],\n",
-    "                            {images: test_x, depthmaps: test_t})\n",
+    "        if batch % 100 == 0:\n",
+    "            print('Loss after {} batches: Dis. {:.4f}, Gen. {:.4f}'\n",
+    "                  .format(batch, mavg_d_loss, mavg_g_loss))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_p = sess.run(generator, {images: test_x[:10]})\n",
+    "print(np.unique(test_p))\n",
+    "test_p = ((test_p + 1) / 2) * 255\n",
     "\n",
-    "    print('{}: {:.2f}, {:.2f}'.format(i, dloss, gloss))"
+    "plt.figure()\n",
+    "plt.hist(np.reshape(test_p, -1), normed=True, log=False)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plt.figure()\n",
+    "triples = zip(test_x[:10], test_t[:10], test_p[:10])\n",
+    "_, axis = plt.subplots(5, 3, figsize=(10, 20))\n",
+    "plt.tight_layout(), plt.gray()\n",
+    "for (rgb, d, p), (ax1, ax2, ax3) in zip(triples, axis):\n",
+    "    ax1.axis('off'), ax2.axis('off'), ax3.axis('off')\n",
+    "    ax1.imshow(rgb)\n",
+    "    ax2.imshow(imresize(d, rgb.shape))\n",
+    "    ax3.imshow(imresize(np.squeeze(p), rgb.shape))\n",
+    "plt.show()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "depthmaps",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "depthmaps"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
