Train specific variables explicitly.

--- a/pix2pix.ipynb
+++ b/pix2pix.ipynb
@@ -141,15 +141,17 @@
     "        (List[tf.Operation]): Batch normalization update operations.\n",
     "    \"\"\"\n",
     "    with tf.variable_scope('discriminator') as scope:\n",
-    "        net = conv2d(images, 64)\n",
+    "        net = images\n",
+    "        net = conv2d(net, 64)\n",
     "        net = conv2d(net, 128, norm=True, training=is_training)\n",
     "        net = conv2d(net, 256, norm=True, training=is_training)\n",
     "        net = conv2d(net, 512, norm=True, training=is_training)\n",
     "        net = conv2d(net, 1, (1, 1))\n",
     "        logits = tf.layers.dense(net, 1, tf.identity)\n",
     "        out = tf.nn.sigmoid(logits)\n",
-    "        ops = get_variables(scope, collection=tf.GraphKeys.UPDATE_OPS)\n",
-    "        return out, logits, ops"
+    "    theta = get_variables(scope)\n",
+    "    ops = get_variables(scope, collection=tf.GraphKeys.UPDATE_OPS)\n",
+    "    return out, logits, theta, ops"
    ]
   },
   {
@@ -175,37 +177,39 @@
     "    \"\"\"\n",
     "\n",
     "    with tf.variable_scope('generator') as scope:\n",
-    "        with tf.variable_scope('encoder'):\n",
-    "            enc0 = conv2d(images, 64)\n",
-    "            enc1 = conv2d(enc0, 128, norm=True, training=is_training)\n",
-    "            enc2 = conv2d(enc1, 256, norm=True, training=is_training)\n",
-    "            enc3 = conv2d(enc2, 512, norm=True, training=is_training)\n",
-    "            enc4 = conv2d(enc3, 512, norm=True, training=is_training)\n",
-    "            enc5 = conv2d(enc4, 512, norm=True, training=is_training)\n",
-    "            enc6 = conv2d(enc5, 512, norm=True, training=is_training)\n",
-    "            enc7 = conv2d(enc6, 512, norm=True, training=is_training)\n",
+    "        with tf.variable_scope('encoder'): # 256x256\n",
+    "            net = images\n",
+    "            enc0 = conv2d(net, 64)  # 128x128\n",
+    "            enc1 = conv2d(enc0, 128, norm=True, training=is_training)  # 64x64\n",
+    "            enc2 = conv2d(enc1, 256, norm=True, training=is_training)  # 32x32\n",
+    "            enc3 = conv2d(enc2, 512, norm=True, training=is_training)  # 16x16\n",
+    "            enc4 = conv2d(enc3, 512, norm=True, training=is_training)  # 8x8\n",
+    "            enc5 = conv2d(enc4, 512, norm=True, training=is_training)  # 4x4\n",
+    "            enc6 = conv2d(enc5, 512, norm=True, training=is_training)  # 2x2x512\n",
+    "            enc7 = conv2d(enc6, 512, norm=True, training=is_training)  # 1x1x512\n",
     "        with tf.variable_scope('decoder'):\n",
-    "            dec = conv2d_transpose(enc7, 512, norm=True, training=is_training)\n",
+    "            dec = conv2d_transpose(enc7, 512, norm=True, training=is_training)  # 2x2\n",
     "            dec = tf.layers.dropout(dec, .5)  # 512\n",
-    "            dec = conv2d_transpose(dec, 512, norm=True, training=is_training)\n",
-    "            dec = tf.layers.dropout(dec, .5)\n",
     "            dec = tf.concat([dec, enc6], axis=-1)  # 1024\n",
-    "            dec = conv2d_transpose(dec, 512, norm=True, training=is_training)\n",
+    "            dec = conv2d_transpose(dec, 512, norm=True, training=is_training)  # 4x4\n",
     "            dec = tf.layers.dropout(dec, .5)\n",
     "            dec = tf.concat([dec, enc5], axis=-1)  # 1024\n",
-    "            dec = conv2d_transpose(dec, 512, norm=True, training=is_training)\n",
+    "            dec = conv2d_transpose(dec, 512, norm=True, training=is_training)  # 8x8\n",
+    "            dec = tf.layers.dropout(dec, .5)\n",
     "            dec = tf.concat([dec, enc4], axis=-1)  # 1024\n",
-    "            dec = conv2d_transpose(dec, 512, norm=True, training=is_training)\n",
+    "            dec = conv2d_transpose(dec, 512, norm=True, training=is_training)  # 16x16\n",
     "            dec = tf.concat([dec, enc3], axis=-1)  # 1024\n",
-    "            dec = conv2d_transpose(dec, 256, norm=True, training=is_training)\n",
+    "#             dec = conv2d_transpose(dec, 512, norm=True, training=is_training)\n",
+    "            dec = conv2d_transpose(dec, 256, norm=True, training=is_training)  # 32x32\n",
     "            dec = tf.concat([dec, enc2], axis=-1)  # 512\n",
-    "            dec = conv2d_transpose(dec, 128, norm=True, training=is_training)\n",
+    "            dec = conv2d_transpose(dec, 128, norm=True, training=is_training)  # 64x64\n",
     "            dec = tf.concat([dec, enc1], axis=-1)  # 256\n",
-    "            dec = conv2d_transpose(dec, 64, norm=True, training=is_training)\n",
+    "            dec = conv2d_transpose(dec, 64, norm=True, training=is_training)  # 128x128\n",
     "            dec = tf.concat([dec, enc0], axis=-1)  # 128\n",
-    "            out = conv2d(dec, 1, (1, 1), 1, activation=tf.nn.tanh)\n",
+    "            out = conv2d_transpose(dec, 1, activation=tf.nn.tanh)  # 256x256\n",
+    "        theta = get_variables(scope)\n",
     "        ops = get_variables(scope, collection=tf.GraphKeys.UPDATE_OPS)\n",
-    "        return out, ops"
+    "        return out, theta, ops"
    ]
   },
   {
@@ -218,11 +222,11 @@
     "\n",
     "is_training = tf.placeholder_with_default(False, None)\n",
     "images = tf.placeholder(tf.uint8, (None, 256, 256), name='inputs')\n",
-    "depthmaps = tf.placeholder(tf.float32, (None, 256, 256), name='targets')\n",
+    "depthmaps = tf.placeholder(tf.uint8, (None, 256, 256), name='targets')\n",
     "\n",
     "\n",
     "def scale(img):\n",
-    "    return ((tf.cast(img, tf.float32) / 255) - .5) * 2\n",
+    "    return tf.cast(img, tf.float32) / 127.5 - 1.\n",
     "\n",
     "\n",
     "images_ = tf.reshape(scale(images), (-1, 256, 256, 1))\n",
@@ -230,7 +234,7 @@
     "\n",
     "# Create generator (and sampler?)\n",
     "# remake_generator = tf.make_template('generator', make_generator)\n",
-    "generator, g_ops = make_generator(images_, is_training)\n",
+    "generator, g_theta, g_ops = make_generator(images_, is_training)\n",
     "# sampler = remake_generator(images_, is_training)\n",
     "\n",
     "\n",
@@ -245,28 +249,29 @@
     "real = tf.concat([images_, depthmaps_], axis=-1)\n",
     "fake = tf.concat([images_, generator], axis=-1)\n",
     "remake_discriminator = tf.make_template('discriminator', make_discriminator)\n",
-    "d_real, d_logits_real, d_ops = remake_discriminator(real, is_training)\n",
-    "d_fake, d_logits_fake, _ = remake_discriminator(fake, is_training)\n",
+    "d_real, d_logits_real, d_theta, d_ops = remake_discriminator(real, is_training)\n",
+    "d_fake, d_logits_fake, _, _ = remake_discriminator(fake, is_training)\n",
     "\n",
     "# Create discriminator losses.\n",
     "d_loss_real = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(\n",
-    "    logits=d_logits_real, labels=soft_labels_like(d_fake, real=True)))\n",
+    "    logits=d_logits_real, labels=tf.ones_like(d_real)))\n",
     "d_loss_fake = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(\n",
-    "    logits=d_logits_fake, labels=soft_labels_like(d_fake, real=False)))\n",
+    "    logits=d_logits_fake, labels=tf.zeros_like(d_fake)))\n",
     "d_loss = d_loss_real + d_loss_fake\n",
     "\n",
     "LAMBDA = 100\n",
     "\n",
     "# Create generator loss.\n",
-    "g_loss = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(\n",
-    "    logits=d_logits_fake, labels=soft_labels_like(d_fake, real=True))) \\\n",
-    "    + LAMBDA * tf.reduce_mean(tf.abs(depthmaps - generator))\n",
+    "ganloss = tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(\n",
+    "        logits=d_logits_fake, labels=tf.ones_like(d_fake)))\n",
+    "l1loss = tf.reduce_mean(tf.abs(depthmaps_ - generator))\n",
+    "g_loss = ganloss + LAMBDA * l1loss\n",
     "\n",
     "with tf.control_dependencies(g_ops):\n",
-    "    g_op = tf.train.AdamOptimizer().minimize(g_loss)\n",
+    "    g_op = tf.train.AdamOptimizer(1e-4, beta1=0.9).minimize(g_loss, var_list=g_theta)\n",
     "\n",
     "with tf.control_dependencies(d_ops):\n",
-    "    d_op = tf.train.AdamOptimizer().minimize(d_loss)"
+    "    d_op = tf.train.AdamOptimizer(1e-4, beta1=0.9).minimize(d_loss, var_list=d_theta)"
    ]
   },
   {
@@ -325,10 +330,8 @@
     "                               {images: batch_x, depthmaps: batch_t,\n",
     "                                is_training: True})\n",
     "            mavg_g_loss = moving_average(loss, mavg_g_loss)\n",
-    "\n",
-    "        if batch % 100 == 0:\n",
-    "            print('Loss after {} batches: Dis. {:.4f}, Gen. {:.4f}'\n",
-    "                  .format(batch, mavg_d_loss, mavg_g_loss))"
+    "    print('Loss after epoch {}: Dis. {:.4f}, Gen. {:.4f}'\n",
+    "          .format(epoch, mavg_d_loss, mavg_g_loss))"
    ]
   },
   {
@@ -338,11 +341,21 @@
    "outputs": [],
    "source": [
     "test_p = sess.run(generator, {images: test_x[:10]})\n",
+    "test_p = np.clip(((test_p + 1) / 2), 0, 255)\n",
     "print(np.unique(test_p))\n",
-    "test_p = ((test_p + 1) / 2) * 255\n",
     "\n",
-    "plt.figure()\n",
-    "plt.hist(np.reshape(test_p, -1), normed=True, log=False)\n",
+    "# plt.figure()\n",
+    "# plt.hist(np.reshape(test_p, -1), normed=True, log=False)\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(np.squeeze(test_p[0]))\n",
     "plt.show()"
    ]
   },
@@ -352,15 +365,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plt.figure()\n",
     "triples = zip(test_x[:10], test_t[:10], test_p[:10])\n",
     "_, axis = plt.subplots(5, 3, figsize=(10, 20))\n",
     "plt.tight_layout(), plt.gray()\n",
     "for (rgb, d, p), (ax1, ax2, ax3) in zip(triples, axis):\n",
     "    ax1.axis('off'), ax2.axis('off'), ax3.axis('off')\n",
     "    ax1.imshow(rgb)\n",
-    "    ax2.imshow(imresize(d, rgb.shape))\n",
-    "    ax3.imshow(imresize(np.squeeze(p), rgb.shape))\n",
+    "    ax2.imshow(d)\n",
+    "    ax3.imshow(np.squeeze(p))\n",
     "plt.show()"
    ]
   }
