Track old network adjustments.

--- a/Make3D-Eigen_et_al.ipynb
+++ b/Make3D-Eigen_et_al.ipynb
@@ -11,9 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -37,10 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "_, axis = plt.subplots(5, 2, figsize=(10,20))\n",
@@ -72,9 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_data, train_targets = zip(*train_pairs)\n",
@@ -116,9 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# MODEL\n",
@@ -169,20 +160,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "with tf.Session() as sess:\n",
-    "    sess.run(tf.global_variables_initializer())\n",
-    "    for i in range(100 + 1):\n",
-    "        batch = np.random.permutation(32)\n",
-    "        batch_x, batch_t = train_x[batch], train_t[batch]\n",
+    "def batches(x, y, batchsize=32):\n",
+    "    permute = np.random.permutation(len(x))\n",
+    "    for i in range(0, len(x)-batchsize, batchsize):\n",
+    "        indices = permute[i:i+batchsize]\n",
+    "        yield x[indices], y[indices]    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sess = tf.Session()\n",
+    "\n",
+    "sess.run(tf.global_variables_initializer())\n",
+    "for epoch in range(1000 + 1):\n",
+    "    for batch_x, batch_t in batches(train_x, train_t, 32):\n",
     "        sess.run(optimizer, {x: batch_x, t: batch_t})\n",
-    "        if i % 1 == 0:\n",
-    "            print(i, sess.run(loss, {x: test_x, t: test_t}))\n",
-    "    test_p = sess.run(y, {x: test_x})"
+    "    print(epoch, sess.run(loss, {x: test_x, t: test_t}))"
    ]
   },
   {
@@ -195,13 +195,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "triples = zip(test_x[:10], test_t[:10], test_p[:10])\n",
+    "test_p = sess.run(y, {x: test_x})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "permute = np.random.randint(0, len(test_p), 10)\n",
+    "triples = zip(test_x[permute], test_t[permute], test_p[permute])\n",
     "_, axis = plt.subplots(5, 3, figsize=(10,20))\n",
     "plt.tight_layout(), plt.gray()\n",
     "for (rgb, d, p), (ax1, ax2, ax3) in zip(triples, axis):\n",
