--- a/Make3D.ipynb
+++ b/Make3D.ipynb
@@ -32,10 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "_, axis = plt.subplots(5, 2, figsize=(10,20))\n",
@@ -67,9 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_data, train_targets = zip(*train_pairs)\n",
@@ -78,11 +73,10 @@
     "def rgb2gray(rgb):\n",
     "    return np.dot(rgb[...,:3], [0.299, 0.587, 0.114])\n",
     "\n",
-    "train_data = [rgb2gray(img)/255 - .5 for img in train_data]\n",
-    "train_targets = [sp.misc.imresize(img, (47, 31))/255 - .5 for img in train_targets]\n",
-    "test_data = [rgb2gray(img)/255 - .5 for img in test_data]\n",
-    "test_targets = [sp.misc.imresize(img, (47, 31))/255 - .5 for img in test_targets]\n",
-    "\n",
+    "train_data = [sp.misc.imresize(rgb2gray(img), (128, 96))/127.5 - 1 for img in train_data]\n",
+    "train_targets = [sp.misc.imresize(img, (47, 31))/127.5 - 1 for img in train_targets]\n",
+    "test_data = [sp.misc.imresize(rgb2gray(img), (128, 96))/ 127.5 - 1 for img in test_data]\n",
+    "test_targets = [sp.misc.imresize(img, (47, 31))/127.5 - 1 for img in test_targets]\n",
     "\n",
     "train_x, train_t = np.asarray(train_data), np.asarray(train_targets)\n",
     "test_x, test_t = np.asarray(test_data), np.asarray(test_targets)\n",
@@ -111,9 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# MODEL\n",
@@ -145,20 +137,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "with tf.Session() as sess:\n",
-    "    sess.run(tf.global_variables_initializer())\n",
-    "    for i in range(10000 + 1):\n",
-    "        batch = np.random.permutation(32)\n",
-    "        batch_x, batch_t = train_x[batch], train_t[batch]\n",
+    "def batches(x, y, batchsize=32):\n",
+    "    permute = np.random.permutation(len(x))\n",
+    "    for i in range(0, len(x)-batchsize, batchsize):\n",
+    "        indices = permute[i:i+batchsize]\n",
+    "        yield x[indices], y[indices]    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sess = tf.Session()\n",
+    "\n",
+    "sess.run(tf.global_variables_initializer())\n",
+    "\n",
+    "for epoch in range(2000 + 1):\n",
+    "    for batch_x, batch_t in batches(train_x, train_t, 32):\n",
     "        sess.run(optimizer, {x: batch_x, t: batch_t})\n",
-    "        if i % 1000 == 0:\n",
-    "            print(i, sess.run(loss, {x: test_x, t: test_t}))\n",
-    "    test_p = sess.run(y, {x: test_x})"
+    "    print(epoch, sess.run(loss, {x: test_x, t: test_t}))\n",
+    "\n",
+    "test_p = sess.run(y, {x: test_x})"
    ]
   },
   {
