Save network weights after each epoch.

--- a/pix2pix.ipynb
+++ b/pix2pix.ipynb
@@ -268,10 +268,10 @@
     "g_loss = ganloss + LAMBDA * l1loss\n",
     "\n",
     "with tf.control_dependencies(g_ops):\n",
-    "    g_op = tf.train.AdamOptimizer(1e-4, beta1=0.9).minimize(g_loss, var_list=g_theta)\n",
+    "    g_op = tf.train.AdamOptimizer(1e-4, beta1=0.5).minimize(g_loss, var_list=g_theta)\n",
     "\n",
     "with tf.control_dependencies(d_ops):\n",
-    "    d_op = tf.train.AdamOptimizer(1e-4, beta1=0.9).minimize(d_loss, var_list=d_theta)"
+    "    d_op = tf.train.AdamOptimizer(1e-4, beta1=0.5).minimize(d_loss, var_list=d_theta)"
    ]
   },
   {
@@ -305,6 +305,7 @@
     "sess = tf.InteractiveSession()\n",
     "sess.run(tf.global_variables_initializer())\n",
     "\n",
+    "saver = tf.train.Saver()\n",
     "\n",
     "def moving_average(current, previous=None, alpha=0.01):\n",
     "    try:\n",
@@ -330,6 +331,8 @@
     "                               {images: batch_x, depthmaps: batch_t,\n",
     "                                is_training: True})\n",
     "            mavg_g_loss = moving_average(loss, mavg_g_loss)\n",
+    "\n",
+    "    saver.save(sess, 'pix2pix-', global_step=epoch)\n",
     "    print('Loss after epoch {}: Dis. {:.4f}, Gen. {:.4f}'\n",
     "          .format(epoch, mavg_d_loss, mavg_g_loss))"
    ]
