Add SAN paper reference.

--- a/library.bib
+++ b/library.bib
@@ -17,3 +17,11 @@
   year={2016},
   publisher={IEEE}
 }
+
+
+@article{Pan2017,
+  title={Supervised Adversarial Networks for Image Saliency Detection},
+  author={Pan, Hengyue and Jiang, Hui},
+  journal={arXiv preprint arXiv:1704.07242},
+  year={2017}
+}
